2004-01-08  Jesper Harder  <harder@ifa.au.dk>

	* gnus-sum.el (gnus-summary-update-mark): Fix for multibyte marks.

	* gnus-util.el (gnus-replace-in-string): Remove Emacs 20 code.

2003-11-15  Simon Josefsson  <jas@extundo.com>

	* pgg-gpg.el (pgg-gpg-lookup-all-secret-keys)
	(pgg-gpg-lookup-key): Use regexp match instead of
	split-string (split-string is different between emacs 21.2 and
	21.4).  Reported by ultrasoul@ultrasoul.com (David D. Smith).

2004-01-08  Jesper Harder  <harder@ifa.au.dk>

	* gnus-art.el (gnus-mime-view-all-parts)
	(gnus-article-part-wrapper, gnus-article-view-part): Use
	with-current-buffer.

2004-01-07  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-disable-spam-split-during-ham-respool)
	(spam-spamoracle-database, spam-cache-lookups)
	(spam-split-last-successful-check, spam-clear-cache, spam-xor)
	(spam-group-ham-mark-p, spam-group-spam-mark-p)
	(spam-group-ham-marks, spam-group-spam-marks)
	(spam-group-spam-contents-p, spam-group-ham-contents-p)
	(spam-list-of-processors, spam-list-of-statistical-checks): doc
	fix, also add spam-use-blackholes to the statistical checks
	(spam-fetch-field-fast): new interface to fetching fields, may
	become a macro
	(spam-fetch-field-from-fast, spam-fetch-field-subject-fast)
	(spam-fetch-field-message-id-fast): use spam-fetch-field-fast
	(spam-insert-fake-headers): fake an article when needed
	(spam-find-spam): fake article when possible
	(spam-check-blackholes, spam-check-BBDB, spam-from-listed-p)
	(spam-check-bogofilter-headers): use message-fetch-field instead
	of nnmail-fetch-field

2004-01-07  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-score.el (gnus-score-find-trace): Add `k' (kill-buffer).

2004-01-07  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-split): do not require spam-use-CHECK to be
	enabled if that check is passed to spam-split explicitly; also
	fix so 'spam doesn't get converted to spam-split-group when
	spam-split-symbolic-return is t